// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`/songs/[id] > { isAdmin: true } renders edit button 1`] = `
<div
  class="flex flex-col lg:grid lg:grid-cols-10 lg:gap-8"
>
  <!--v-if-->
  <div
    class="lg:col-span-10"
  >
    
    <div
      class="relative border-b border-gray-200 dark:border-gray-800 py-8"
    >
      <div
        class="mb-3 text-sm/6 font-semibold text-primary flex items-center gap-1.5"
      >
        
        Songs
        
      </div>
      <div
        class="flex flex-col lg:flex-row items-start gap-6"
      >
        <!--v-if-->
        <div
          class="flex-1"
        >
          <div
            class="flex flex-col lg:flex-row lg:items-center lg:justify-between"
          >
            <h1
              class="text-3xl sm:text-4xl font-bold text-gray-900 dark:text-white tracking-tight"
            >
              
              PARANOiA
              
            </h1>
            <div
              class="flex flex-wrap items-center gap-1.5 mt-4 lg:mt-0"
            >
              
              
              
              <a
                class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 shadow-sm ring-1 ring-inset ring-gray-300 dark:ring-gray-700 text-gray-900 dark:text-white bg-white hover:bg-gray-50 disabled:bg-white dark:bg-gray-900 dark:hover:bg-gray-800/50 dark:disabled:bg-gray-900 focus-visible:ring-2 focus-visible:ring-primary-500 dark:focus-visible:ring-primary-400 inline-flex items-center"
                href="/admin/songs/06loOQ0DQb0DqbOibl6qO81qlIdoP9DI"
                rel="noopener noreferrer"
                target="_blank"
              >
                
                
                <span
                  aria-hidden="true"
                  class="iconify i-heroicons:pencil-square flex-shrink-0 h-5 w-5"
                />
                
                
                <span
                  class=""
                >
                  編集
                </span>
                
                
                <!--v-if-->
                
                
              </a>
              
              
              
            </div>
          </div>
          <div
            class="mt-4 text-lg text-gray-500 dark:text-gray-400"
          >
            
            <div>
              180 / DDR 1st
            </div>
            <div>
              BPM 180
            </div>
            
          </div>
          
          
        </div>
      </div>
    </div>
    <div
      class="mt-8 pb-24"
    >
      
      <div
        class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-8"
      >
        
        
        <div
          class="w-full flex flex-col"
        >
          
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_9"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-blue-500 dark:text-blue-400 bg-blue-50 hover:bg-blue-100 disabled:bg-blue-50 dark:bg-blue-950 dark:hover:bg-blue-900 dark:disabled:bg-blue-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-blue-500 dark:focus-visible:ring-blue-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              id="headlessui-disclosure-button-nJ8nXj3gjHd_8"
              type="button"
            >
              
              
              <!--v-if-->
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                SP-BEGINNER (4)
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_9"
                >
                  
                  <div
                    class="grid grid-cols-2 h-300"
                  >
                    <div
                      class="m-2"
                    >
                      <ul>
                        <li>
                          <em>
                            Notes
                          </em>
                          : 138
                        </li>
                        <li>
                          <em>
                            Freeze Arrow
                          </em>
                          : 0
                        </li>
                        <li>
                          <em>
                            Shock Arrow
                          </em>
                          : 0
                        </li>
                        <br />
                      </ul>
                    </div>
                  </div>
                  
                </div>
              </div>
            </transition-stub>
          </div>
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_11"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-blue-500 dark:text-blue-400 bg-blue-50 hover:bg-blue-100 disabled:bg-blue-50 dark:bg-blue-950 dark:hover:bg-blue-900 dark:disabled:bg-blue-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-blue-500 dark:focus-visible:ring-blue-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              id="headlessui-disclosure-button-nJ8nXj3gjHd_10"
              type="button"
            >
              
              
              <!--v-if-->
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                スコアランキング
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_11"
                >
                  
                  
                  
                </div>
              </div>
            </transition-stub>
          </div>
          
        </div>
        <div
          class="w-full flex flex-col"
        >
          
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_13"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-yellow-500 dark:text-yellow-400 bg-yellow-50 hover:bg-yellow-100 disabled:bg-yellow-50 dark:bg-yellow-950 dark:hover:bg-yellow-900 dark:disabled:bg-yellow-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-yellow-500 dark:focus-visible:ring-yellow-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              id="headlessui-disclosure-button-nJ8nXj3gjHd_12"
              type="button"
            >
              
              
              <!--v-if-->
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                SP-BASIC (8)
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_13"
                >
                  
                  <div
                    class="grid grid-cols-2 h-300"
                  >
                    <div
                      class="m-2"
                    >
                      <ul>
                        <li>
                          <em>
                            Notes
                          </em>
                          : 264
                        </li>
                        <li>
                          <em>
                            Freeze Arrow
                          </em>
                          : 0
                        </li>
                        <li>
                          <em>
                            Shock Arrow
                          </em>
                          : 0
                        </li>
                        <br />
                      </ul>
                    </div>
                  </div>
                  
                </div>
              </div>
            </transition-stub>
          </div>
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_15"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-yellow-500 dark:text-yellow-400 bg-yellow-50 hover:bg-yellow-100 disabled:bg-yellow-50 dark:bg-yellow-950 dark:hover:bg-yellow-900 dark:disabled:bg-yellow-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-yellow-500 dark:focus-visible:ring-yellow-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              id="headlessui-disclosure-button-nJ8nXj3gjHd_14"
              type="button"
            >
              
              
              <!--v-if-->
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                スコアランキング
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_15"
                >
                  
                  
                  
                </div>
              </div>
            </transition-stub>
          </div>
          
        </div>
        
        
      </div>
      <div
        class="flex items-center align-center text-center w-full flex-row"
      >
        <div
          class="flex border-gray-200 dark:border-gray-800 w-full border-t border-solid"
        />
        <!--v-if-->
      </div>
      <div
        class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-8"
      >
        
        
      </div>
      
    </div>
    
  </div>
  <!--v-if-->
</div>
`;

exports[`/songs/[id] > { song: <Data> } renders song info 1`] = `
<div
  class="flex flex-col lg:grid lg:grid-cols-10 lg:gap-8"
>
  <!--v-if-->
  <div
    class="lg:col-span-10"
  >
    
    <div
      class="relative border-b border-gray-200 dark:border-gray-800 py-8"
    >
      <div
        class="mb-3 text-sm/6 font-semibold text-primary flex items-center gap-1.5"
      >
        
        Songs
        
      </div>
      <div
        class="flex flex-col lg:flex-row items-start gap-6"
      >
        <!--v-if-->
        <div
          class="flex-1"
        >
          <div
            class="flex flex-col lg:flex-row lg:items-center lg:justify-between"
          >
            <h1
              class="text-3xl sm:text-4xl font-bold text-gray-900 dark:text-white tracking-tight"
            >
              
              PARANOiA
              
            </h1>
            <!--v-if-->
          </div>
          <div
            class="mt-4 text-lg text-gray-500 dark:text-gray-400"
          >
            
            <div>
              180 / DDR 1st
            </div>
            <div>
              BPM 180
            </div>
            
          </div>
          
          
        </div>
      </div>
    </div>
    <div
      class="mt-8 pb-24"
    >
      
      <div
        class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-8"
      >
        
        
        <div
          class="w-full flex flex-col"
        >
          
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_1"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-blue-500 dark:text-blue-400 bg-blue-50 hover:bg-blue-100 disabled:bg-blue-50 dark:bg-blue-950 dark:hover:bg-blue-900 dark:disabled:bg-blue-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-blue-500 dark:focus-visible:ring-blue-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              id="headlessui-disclosure-button-nJ8nXj3gjHd_0"
              type="button"
            >
              
              
              <!--v-if-->
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                SP-BEGINNER (4)
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_1"
                >
                  
                  <div
                    class="grid grid-cols-2 h-300"
                  >
                    <div
                      class="m-2"
                    >
                      <ul>
                        <li>
                          <em>
                            Notes
                          </em>
                          : 138
                        </li>
                        <li>
                          <em>
                            Freeze Arrow
                          </em>
                          : 0
                        </li>
                        <li>
                          <em>
                            Shock Arrow
                          </em>
                          : 0
                        </li>
                        <br />
                      </ul>
                    </div>
                  </div>
                  
                </div>
              </div>
            </transition-stub>
          </div>
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_3"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-blue-500 dark:text-blue-400 bg-blue-50 hover:bg-blue-100 disabled:bg-blue-50 dark:bg-blue-950 dark:hover:bg-blue-900 dark:disabled:bg-blue-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-blue-500 dark:focus-visible:ring-blue-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              id="headlessui-disclosure-button-nJ8nXj3gjHd_2"
              type="button"
            >
              
              
              <!--v-if-->
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                スコアランキング
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_3"
                >
                  
                  
                  
                </div>
              </div>
            </transition-stub>
          </div>
          
        </div>
        <div
          class="w-full flex flex-col"
        >
          
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_5"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-yellow-500 dark:text-yellow-400 bg-yellow-50 hover:bg-yellow-100 disabled:bg-yellow-50 dark:bg-yellow-950 dark:hover:bg-yellow-900 dark:disabled:bg-yellow-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-yellow-500 dark:focus-visible:ring-yellow-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              id="headlessui-disclosure-button-nJ8nXj3gjHd_4"
              type="button"
            >
              
              
              <!--v-if-->
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                SP-BASIC (8)
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_5"
                >
                  
                  <div
                    class="grid grid-cols-2 h-300"
                  >
                    <div
                      class="m-2"
                    >
                      <ul>
                        <li>
                          <em>
                            Notes
                          </em>
                          : 264
                        </li>
                        <li>
                          <em>
                            Freeze Arrow
                          </em>
                          : 0
                        </li>
                        <li>
                          <em>
                            Shock Arrow
                          </em>
                          : 0
                        </li>
                        <br />
                      </ul>
                    </div>
                  </div>
                  
                </div>
              </div>
            </transition-stub>
          </div>
          <div
            class="w-full flex flex-col"
            data-headlessui-state=""
          >
            <button
              aria-controls="headlessui-disclosure-panel-nJ8nXj3gjHd_7"
              aria-expanded="false"
              class="focus:outline-none focus-visible:outline-0 disabled:cursor-not-allowed disabled:opacity-75 flex-shrink-0 font-medium rounded-md text-sm gap-x-1.5 px-2.5 py-1.5 text-yellow-500 dark:text-yellow-400 bg-yellow-50 hover:bg-yellow-100 disabled:bg-yellow-50 dark:bg-yellow-950 dark:hover:bg-yellow-900 dark:disabled:bg-yellow-950 focus-visible:ring-2 focus-visible:ring-inset focus-visible:ring-yellow-500 dark:focus-visible:ring-yellow-400 inline-flex items-center mb-1.5 w-full"
              data-headlessui-state=""
              id="headlessui-disclosure-button-nJ8nXj3gjHd_6"
              type="button"
            >
              
              
              <!--v-if-->
              
              
              <span
                class="text-left break-all line-clamp-1"
              >
                スコアランキング
              </span>
              
              
              <span
                aria-hidden="true"
                class="iconify i-heroicons:chevron-down-20-solid h-5 w-5 ms-auto transform transition-transform duration-200 flex-shrink-0"
              />
              
              
            </button>
            <transition-stub
              appear="false"
              css="true"
              enteractiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              leaveactiveclass="overflow-hidden transition-[height] duration-200 ease-out"
              persisted="false"
            >
              <div
                style="display: none;"
              >
                <div
                  class="text-sm text-gray-500 dark:text-gray-400 pt-1.5 pb-3"
                  data-headlessui-state=""
                  id="headlessui-disclosure-panel-nJ8nXj3gjHd_7"
                >
                  
                  
                  
                </div>
              </div>
            </transition-stub>
          </div>
          
        </div>
        
        
      </div>
      <div
        class="flex items-center align-center text-center w-full flex-row"
      >
        <div
          class="flex border-gray-200 dark:border-gray-800 w-full border-t border-solid"
        />
        <!--v-if-->
      </div>
      <div
        class="grid grid-cols-1 sm:grid-cols-2 xl:grid-cols-3 gap-8"
      >
        
        
      </div>
      
    </div>
    
  </div>
  <!--v-if-->
</div>
`;
